postgresql-generic/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apps-to-postgresql-generic
  namespace: generic
spec:
  ingress:
    - from:
        # - namespaceSelector:
        #     matchExpressions:
        #       - key: kubernetes.io/metadata.name
        #         operator: In
        #         values:
        #           - nextcloud
        #     matchLabels:
        #       kubernetes.io/metadata.name: nextcloud
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - firefly
            # matchLabels:
            #   kubernetes.io/metadata.name: firefly
          # podSelector:
          #   matchExpressions:
          #     - key: app
          #       operator: In
          #       values:
          #         - nextcloud
          #   matchLabels:
          #     app: nextcloud
  podSelector:
    matchLabels:
      app: postgresql-primary
  policyTypes:
    - Ingress
